<resources>
    <string name="app_name">Weatherly</string>
    <string name="celsius">°C</string>
    <string name="current_details">Current details</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="day_forecast">5 day / 3 hour forecast</string>
    <string name="extended_forecast">Extended forecast</string>
    <string name="about">About</string>
    <string name="about_weatherly">About Weatherly</string>
    <string name="powered_by_openweathermap">Powered by OpenWeatherMap API</string>
    <string name="icon_freepik">Icons made by Those Icons from www.flaticon.com is licensed by CC 3.0 BY</string>
    <string name="icon_launcher_freepik">Launcher icon made by Smashicons from www.flaticon.com is licensed by CC 3.0 BY</string>
    <string name="made_by">Made by Dumevi Cruces</string>
</resources>
